--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0"
+    "firebase-functions": "^3.6.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
